--- a/catalog/container/catalog-info.yaml
+++ b/catalog/container/catalog-info.yaml
@@ -1,30 +1,23 @@
-- apiVersion: backstage.io/v1alpha1
-  kind: Component
-  metadata:
-    description: ''
-    name: authorization-server
-    namespace: default
-  spec:
-    lifecycle: production
-    owner: team-a
-    type: service
-- apiVersion: backstage.io/v1alpha1
-  kind: Component
-  metadata:
-    description: ''
-    name: authorization-service
-    namespace: default
-  spec:
-    lifecycle: production
-    owner: team-a
-    type: service
-- apiVersion: backstage.io/v1alpha1
-  kind: Component
-  metadata:
-    description: ''
-    name: authorization-server-1
-    namespace: default
-  spec:
-    lifecycle: production
-    owner: team-a
-    type: service
+---
+apiVersion: backstage.io/v1alpha1
+kind: Component
+metadata:
+  description: Authorizez the person/system based on Oauth2 protocol
+  name: authorization-service
+  namespace: default
+spec:
+  lifecycle: production
+  owner: team-a
+  technology: Spring Boot
+  type: service
+---
+apiVersion: backstage.io/v1alpha1
+kind: Resource
+metadata:
+  description: Contains users and clients to authenticate person and machines
+  name: database-users-clients
+  namespace: default
+spec:
+  owner: team-a
+  technology: PostgreSQL
+  type: database
