--- a/.github/workflows/pr-merge.yml
+++ b/.github/workflows/pr-merge.yml
@@ -15,12 +15,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Backup catalog-info.yaml from current branch
+      - name: Backup catalog files from current branch
         run: |
-          mkdir -p backup_catalog/system backup_catalog/container backup_catalog/component
-          cp catalog/system/catalog-info.yaml backup_catalog/system/catalog-info.yaml
-          cp catalog/container/catalog-info.yaml backup_catalog/container/catalog-info.yaml
-          cp catalog/component/catalog-info.yaml backup_catalog/component/catalog-info.yaml
+          # Create backup directories for each entity type
+          mkdir -p backup_catalog/apis backup_catalog/components backup_catalog/resources backup_catalog/systems backup_catalog/users
+          # Copy all YAML files from each entity directory to backup
+          cp -r catalog/apis/*.yaml backup_catalog/apis/ 2>/dev/null || echo "No API files to backup"
+          cp -r catalog/components/*.yaml backup_catalog/components/ 2>/dev/null || echo "No component files to backup"
+          cp -r catalog/resources/*.yaml backup_catalog/resources/ 2>/dev/null || echo "No resource files to backup"
+          cp -r catalog/systems/*.yaml backup_catalog/systems/ 2>/dev/null || echo "No system files to backup"
+          cp -r catalog/users/*.yaml backup_catalog/users/ 2>/dev/null || echo "No user files to backup"
 
       - name: Clean Workspace
         run: |
@@ -36,15 +40,24 @@ jobs:
 
       - name: Compare generated Backstage files with committed Backstage files
         run: |
-          for dir in system container component; do
-            if [ -f "backup_catalog/$dir/catalog-info.yaml" ]; then
-              diff "backup_catalog/$dir/catalog-info.yaml" "catalog/$dir/catalog-info.yaml"
-              if [ $? -ne 0 ]; then
-                echo "Error: Generated catalog-info.yaml in $dir does not match the one in main"
-                exit 1
-              fi
+          for dir in apis components resources systems users; do
+            if [ -d "backup_catalog/$dir" ]; then
+              for file in backup_catalog/$dir/*.yaml; do
+                base_name=$(basename "$file")
+                generated_file="catalog/$dir/$base_name"
+                if [ -f "$generated_file" ]; then
+                  diff "$file" "$generated_file"
+                  if [ $? -ne 0 ]; then
+                    echo "Error: Generated $generated_file does not match the one in main"
+                    exit 1
+                  fi
+                else
+                  echo "Generated file $generated_file not found"
+                  exit 1
+                fi
+              done
             else
-              echo "No catalog-info.yaml in main for $dir, skipping comparison"
+              echo "No backup files for $dir, skipping comparison"
             fi
           done
 
@@ -75,15 +88,17 @@ jobs:
               exit 1
             fi
           done
-          # Validate catalog files exist
-          for dir in "$CATALOG_DIR"/system "$CATALOG_DIR"/container "$CATALOG_DIR"/component; do
-            if [ ! -f "$dir/catalog-info.yaml" ]; then
-              echo "Error: catalog-info.yaml not found in $dir"
+          # Validate catalog files exist in each entity directory
+          for dir in "$CATALOG_DIR"/apis "$CATALOG_DIR"/components "$CATALOG_DIR"/resources "$CATALOG_DIR"/systems "$CATALOG_DIR"/users; do
+            if [ -z "$(ls -A "$dir"/*.yaml 2>/dev/null)" ]; then
+              echo "Error: No YAML files found in $dir"
               exit 1
             fi
-            if [ ! -s "$dir/catalog-info.yaml" ]; then
-              echo "Error: catalog-info.yaml in $dir is empty"
-              exit 1
-            fi
+            for yaml_file in "$dir"/*.yaml; do
+              if [ ! -s "$yaml_file" ]; then
+                echo "Error: YAML file $yaml_file is empty"
+                exit 1
+              fi
+            done
           done
           echo "Validation successful: All XML and YAML files are present and non-empty"
