--- a/catalog/components/spring-security-bean.yaml
+++ b/catalog/components/spring-security-bean.yaml
@@ -6,15 +6,19 @@ metadata:
   description: Security Bean, to setup the oauth2 server and expose the oauth2 endpoints
   name: spring-security-bean
   tags:
-  - spring service
+  - spring-library
+  - authorization-service-library
 spec:
   dependsOn:
   - component:postgres-repository
+  - resource:secret-manager
   lifecycle: experimental
   owner: dev-team
   providesApis:
-  - api:api-person-authorize-themselves-through-authorize-endpoint
-  - api:api-machine-authorize-themselves-through-the-token-endpoint
+  - api:api-exchanges-authorization-code-for-access-refresh-token-and-to-exchange-refresh-token-for-new-access-token
+  - api:api-authorize-themselves-through-client-credentials-token-flow
+  - api:api-register-new-clients-over-the-register-client-endpoint
+  - api:api-authorize-the-user-to-get-a-valid-access-refresh-token
   system: authorization-server
-  technology: Spring Service
+  technology: Spring Framework
   type: library
