--- a/catalog/components/token-validator-service.yaml
+++ b/catalog/components/token-validator-service.yaml
@@ -3,18 +3,18 @@ kind: Component
 metadata:
   annotations:
     github.com/project-slug: myorg/myrepo
-  description: Repository for Postgres call
-  name: postgres-repository
+  description: Validates tokens for all protected requests [JSON/HTTP]
+  name: token-validator-service
   tags:
-  - spring-data
-  - database-library
-  - authorization-service-library
+  - spring-service
 spec:
   dependsOn:
-  - resource:postgres-database
   - resource:redis-database
+  - resource:secret-manager
   lifecycle: experimental
   owner: dev-team
+  providesApis:
+  - api:api-validate-token
   system: authorization-server
-  technology: Spring Data JPA
-  type: library
+  technology: Spring Boot Service
+  type: service
