--- a/catalog/systems/authorization-server.yaml
+++ b/catalog/systems/authorization-server.yaml
@@ -3,10 +3,9 @@ kind: System
 metadata:
   annotations:
     github.com/project-slug: myorg/myrepo
-  description: Authorizes person and systems through Oauth2 and gives back a token
-  name: authorization-service
+  description: ''
+  name: authorization-server
   tags: []
 spec:
   lifecycle: experimental
   owner: dev-team
-  type: system
