Multi-service support & Backstage generation
Add support for more common services and add support for generating catalog files based on systems.

- Updated `Makefile` to include parameterized operations for handling multiple service directories dynamically.
- Modified `docker-files/backstage-converter/convert_xml_to_backstage_files.py` to output catalog files to service-specific directories under `catalog/<service-name>/` instead of a flat `catalog/` directory.
- Adjusted `compare_catalogs.sh` to compare catalog files within service-specific subdirectories for accurate comparisons.
- Updated `README.md` to document the new multi-service workflow, including the revised directory structure and usage instructions.
- Moved files to `docs/design/drawio/authorization-server-spring-boot/` as a test case for the new multi-service workflow.
- Added logic in the `Makefile` to iterate over Draw.io directories and generate catalog files for each service accordingly.
- Introduced variables and reusable targets in the `Makefile` to streamline operations across multiple services.
- Ensured the refactored workflow scales effectively for multiple services while maintaining a consistent directory structure.
- Improved the Python script to deal with new technologies such as React, Angular, Python, Go, NodeJS.
- Assigned group ownership to entities.
- Added Domain entities support from C4 diagrams.

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -12,26 +12,6 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Backup catalog files from current branch
+      - name: For all comitted Backstage services, convert svg to xml, and convert from xml to Backstage files and compare them with the committed ones
         run: |
-          make backup-catalogs
-
-      - name: Clean Workspace
-        run: |
-          make clean
-
-      - name: Convert SVG to XML
-        run: |
-          make convert-drawio-svg-to-xml
-
-      - name: Convert XML to Backstage YAML
-        run: |
-          make convert-xml-to-backstage-files
-
-      - name: Compare generated Backstage files with committed Backstage files
-        run: |
-          make validate-catalogs
-
-      - name: Lint Backstage YAML Files
-        run: |
-          make lint-backstage-files
+          make all
