Added mermaid to backstage generator
- Created new Mermaid C4 diagrams based of the Drawio C4 diagrams.
- Updated the Makefile logic to generate new Backstage files based on
  mmd files.
- Added new make compare operation for Mermaid generated Backstage files
  against the committed ones.
- Updated the GitHub workflows to validate Mermaid generated Backstage
  files against the comitted ones and that they are the same.
- Made the README file more detailed for more clarity.

--- a/.github/workflows/commit.yml
+++ b/.github/workflows/commit.yml
@@ -19,3 +19,7 @@ jobs:
       - name: Execute all steps and make sure drawward-cli acts the same as the seperate converter container operations
         run: |
           make process-all-steps-with-drawward-cli
+
+      - name: Execute all process-all-common-steps and generate Mermaid to Backstage files and validate them with the committed ones
+        run: |
+          make process-and-compare-mermaid-all
