--- a/catalog/authorization-server-spring-boot/components/api-gateway.yaml
+++ b/catalog/authorization-server-spring-boot/components/api-gateway.yaml
@@ -17,5 +17,5 @@ spec:
   providesApis:
   - api:api-makes-api-calls-with-validated-token
   system: authorization-server
-  technology: kong
+  technology: Kong
   type: service
