--- a/catalog/authorization-server-spring-boot/components/public-web-browser.yaml
+++ b/catalog/authorization-server-spring-boot/components/public-web-browser.yaml
@@ -15,5 +15,5 @@ spec:
   providesApis:
   - api:api-person-authorizes-themselves-with-authorization-code-flow
   system: authorization-server
-  technology: angular
+  technology: Angular
   type: website
