--- a/catalog/authorization-server-spring-boot/resources/secret-manager.yaml
+++ b/catalog/authorization-server-spring-boot/resources/secret-manager.yaml
@@ -6,10 +6,10 @@ metadata:
   description: Stores secrets for rotating JWT secrets for generating JWT tokens
   name: secret-manager
   tags:
-  - hashcorp vault
+  - hashicorp vault
 spec:
   lifecycle: experimental
   owner: group:dev-team
   system: authorization-server
-  technology: hashcorp vault
+  technology: Hashicorp vault
   type: key-vault
