--- a/catalog/authorization-server-spring-boot/resources/postgres-database.yaml
+++ b/catalog/authorization-server-spring-boot/resources/postgres-database.yaml
@@ -11,5 +11,5 @@ spec:
   lifecycle: experimental
   owner: group:dev-team
   system: authorization-server
-  technology: postgresql
+  technology: PostgreSQL
   type: database
